infra/k8s-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echoboard-dev
  labels:
    name: echoboard-dev
    environment: development
