infra/k8s-dev/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-depl
  namespace: echoboard-dev
  labels:
    app: worker
    environment: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
        environment: development
    spec:
      containers:
        - name: worker
          image: ismaelmours/echoboard-worker:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "ps aux | grep node | grep -v grep"
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "ps aux | grep node | grep -v grep"
            initialDelaySeconds: 10
            periodSeconds: 10
      restartPolicy: Always
